fix animation on mobile, various fixes (#988)

--- a/src/internal/Page/page-overrides.scss
+++ b/src/internal/Page/page-overrides.scss
@@ -36,3 +36,13 @@ div[data-page="guidelines-guidelines-content"] {
     color: $color__blue-90;
   }
 }
+
+div[data-page="guidelines-bluemix-brand"] {
+  .image-grid img {
+    margin-bottom: 1rem;
+  }
+
+  .image-grid.donts strong{
+    margin-bottom: 0 !important;
+  }
+}
