--- a/src/internal/SideNav/_toggle-btn.scss
+++ b/src/internal/SideNav/_toggle-btn.scss
@@ -56,7 +56,7 @@
   }
 
   .side-nav__closed & {
-    right: -2.3rem;
+    right: -2.1rem;
 
     div {
       .line:nth-child(2) {
