--- a/src/scss/global/_layout.scss
+++ b/src/scss/global/_layout.scss
@@ -39,7 +39,7 @@ a {
   @include font-smoothing;
   color: $color__blue-51;
   font-weight: 600;
-  transition: color 250ms;
+  transition: 250ms color, 250ms background-color !important;
 
   &:hover {
     color: $color__blue-40;
